@@ -29,3 +29,5 @@ LWS+19,"Lactobacillus plantarum FS5-5 in 6-8% w/v vs 0% NaCl",microbial,72,46,-0
 MGF+19_10,"Staphylococcus aureus in 10% vs 0% NaCl",microbial,88,58,-0.1735,-0.141,0.0325,0.04,0.011,-0.029,-1.85,-1.7365,0.1135,0.5033,0.4307,-0.0726,308,194,-114,NA,NA,NA,NA,NA,NA
 MGF+19_20,"Staphylococcus aureus in 20% vs 0% NaCl",microbial,184,99,-0.1708,-0.1466,0.0241,0.0251,0.0472,0.0221,-1.8376,-1.7676,0.07,0.4717,0.4503,-0.0214,324,204,-120,NA,NA,NA,NA,NA,NA
 AST+20,"Lactobacillus fermentum with vs without 0.3% to 1.5% w/v bile salts",microbial,368,378,-0.1511,-0.1529,-0.0018,0.0364,0.0343,-0.0021,-1.7553,-1.7575,-0.0022,0.4041,0.4021,-0.002,236,264.5,28.5,NA,NA,NA,NA,NA,NA
+GBR+20_CIRM129,"Propionibacterium freudenreichii CIRM129 in NaCl vs MMO",microbial,90,74,-0.096,-0.1107,-0.0147,0.0515,0.0843,0.0328,-1.5007,-1.6172,-0.1165,0.2568,0.3256,0.0688,319,269,-50,NA,NA,NA,NA,NA,NA
+GBR+20_CIRM1025,"Propionibacterium freudenreichii CIRM1025 in NaCl vs MMO",microbial,64,78,-0.0984,-0.1075,-0.0091,0.0839,0.102,0.0181,-1.5417,-1.5709,-0.0293,0.2812,0.2853,0.0042,330,248,-82,NA,NA,NA,NA,NA,NA
