@@ -2556,6 +2556,16 @@
   doi       = {10.1002/prca.200600474},
 }
 
+@Article{GBR+20,
+  author    = {Floriane Gaucher and Sylvie Bonnassie and Houem Rabah and Pauline Leverrier and Sandrine Pottier and Julien Jardin and Valérie Briard-Bion and Pierre Marchand and Romain Jeantet and Philippe Blanc and Gwénaël Jan},
+  journal   = {Data in Brief},
+  title     = {Data from a proteomic analysis highlight different osmoadaptations in two strain of \emph{{P}ropionibacterium freudenreichii}},
+  year      = {2020},
+  pages     = {104932},
+  volume    = {28},
+  doi       = {10.1016/j.dib.2019.104932},
+}
+
 @Article{BSG15,
   author    = {Borlak, Jürgen and Singh, Prashant and Gazzana, Giuseppe},
   journal   = {BMC Genomics},
